# gh-action-semver-check

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  action.yml  entrypoint.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md  release-drafter.yml
.github/workflows/: ci.yml  release.yml
tests/: test_action.py  test_parse_version.py
