[metadata]
description-file = README.md

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    .git/,
    .tox/,
    docs/,
    build/,
    dist/
max-line-length = 99

# Global options:
[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True

[mypy-tests.*]
ignore_errors = True

[mypy-entrypoint]
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
